UAS Pro 1.0.13
==============

Fixes:
 - Fix unit tests (MODELER-532)

New features:
 - Add ant target to run unit tests on UAS (MODELER-499)
 - Add target to generate a "test specific" version of the UAS (MODELER-495)